--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>URL Checker</title>
+        <title>Form to Excel</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
     </head>
     <body>
