--- a/templates/fios.html
+++ b/templates/fios.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Fios URL Checker</h1>
-<form enctype="multipart/form-data" action="/fiosUpload" method="post">
-    <input id="fiosFile" name="fiosFile" type="file" />
-    <input type="submit">
+<h1>Fios Excel Builder</h1>
+<form id="fiosForm" action="/fiosForm" method="post">
+    <input type="text" id="someData" name="someData">
+    <input type="submit" id="submit-button">
 </form>
 {% endblock %}
