--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,13 +1,3 @@
-#drop{
-	border:2px dashed #bbb;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	padding:25px;
-	text-align:center;
-	font:20pt bold,"Vollkorn";color:#bbb
+input {
+	display: inline;
 }
-#b64data{
-	width:100%;
-}
-a { text-decoration: none }
