--- a/templates/fios.html
+++ b/templates/fios.html
@@ -12,6 +12,20 @@
             <option value="Opera">
             <option value="Safari">
         </datalist>
+
+    <br>
+
+    <input type="text" id="campaignType2" name="campaignType2" placeholder="Campaign Type">
+    <input type="text" id="quarter2" name="quarter2" placeholder="Quarter">
+    <input list="browsers2" name="browsers2">
+        <datalist id="browsers2" name="browsers2">
+            <option value="Internet Explorer">
+            <option value="Firefox">
+            <option value="Chrome">
+            <option value="Opera">
+            <option value="Safari">
+        </datalist>
+
     <input type="submit" id="submit-button">
 </form>
 {% endblock %}
