--- a/templates/fios.html
+++ b/templates/fios.html
@@ -4,7 +4,7 @@
 <form id="fiosForm" action="/fiosForm" method="post">
     <input type="text" id="campaignType" name="campaignType" placeholder="Campaign Type">
     <input type="text" id="quarter" name="quarter" placeholder="Quarter">
-    <input list="browsers" name="browsers">
+    <input list="browsers" name="browsers" placeholder="Browser">
         <datalist id="browsers" name="browsers">
             <option value="Internet Explorer">
             <option value="Firefox">
@@ -17,7 +17,7 @@
 
     <input type="text" id="campaignType2" name="campaignType2" placeholder="Campaign Type">
     <input type="text" id="quarter2" name="quarter2" placeholder="Quarter">
-    <input list="browsers2" name="browsers2">
+    <input list="browsers2" name="browsers2" placeholder="Browser">
         <datalist id="browsers2" name="browsers2">
             <option value="Internet Explorer">
             <option value="Firefox">
