--- a/templates/fios.html
+++ b/templates/fios.html
@@ -1,31 +1,36 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Fios Excel Builder</h1>
+
 <form id="fiosForm" action="/fiosForm" method="post">
-    <input type="text" id="campaignType" name="campaignType" placeholder="Campaign Type">
-    <input type="text" id="quarter" name="quarter" placeholder="Quarter">
-    <input list="browsers" name="browsers" placeholder="Browser">
-        <datalist id="browsers" name="browsers">
-            <option value="Internet Explorer">
-            <option value="Firefox">
-            <option value="Chrome">
-            <option value="Opera">
-            <option value="Safari">
-        </datalist>
+    <input list="marketingtactic" name="marketingtactic" placeholder="Marketing Tactic">
+    <datalist id="marketingtactic" name="marketingtactic">
+        <option value="AFC">
+        <option value="TVA">
+        <option value="BAC">
+        <option value="DMO">
+    </datalist>
 
-    <br>
+    <input list="lineofbusiness" name="lineofbusiness" placeholder="Line of Business">
+    <datalist id="lineofbusiness" name="lineofbusiness">
+        <option value="CON">
+        <option value="SMB">
+    </datalist>
 
-    <input type="text" id="campaignType2" name="campaignType2" placeholder="Campaign Type">
-    <input type="text" id="quarter2" name="quarter2" placeholder="Quarter">
-    <input list="browsers2" name="browsers2" placeholder="Browser">
-        <datalist id="browsers2" name="browsers2">
-            <option value="Internet Explorer">
-            <option value="Firefox">
-            <option value="Chrome">
-            <option value="Opera">
-            <option value="Safari">
-        </datalist>
+    <input list="marketingcampaigntype" name="marketingcampaigntype" placeholder="Marketing Campaign Type">
+    <datalist id="marketingcampaigntype" name="marketingcampaigntype">
+        <option value="ACQ">
+        <option value="CRM">
+        <option value="PRS">
+        <option value="OTH">
+    </datalist>
 
-    <input type="submit" id="submit-button">
+    <input type="text" id="landingpageurl" name="landingpageurl" placeholder="Landing Page URL">
+
+    <input type="text" id="projectcode" name="projectcode" placeholder="Project Code">
+
+
+<input type="submit" id="submit-button">
 </form>
+
 {% endblock %}
