--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Form to Excel</h1>
+    <h1>URL/CMP Builder</h1>
     <p>under construction</p>
-    <h2>Fios</h2>
+    <h2>CRM</h2>
     <ul>
-        <li><a href="/fios">Fios DCO</a></li>
-        <li><a href="#">Fios DCM</a></li>
-    </ul>
-    <h2>Wireless</h2>
-    <ul>
-        <li><a href="#">Wireless DCO</a></li>
-        <li><a href="#">Wireless DCM</a></li>
+        <li><a href="/crm">CRM</a></li>
     </ul>
 {% endblock %}
