--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>URL/CMP Builder</h1>
-    <p>under construction</p>
-    <h2>CRM</h2>
+    <h2>Fios</h2>
     <ul>
-        <li><a href="/crm">CRM</a></li>
+        <li><a href="/fios">Fios</a></li>
     </ul>
 {% endblock %}
