added third row

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,11 @@
 
     </head>
     <body>
+        <header class="App-header">
+            <img src="static/images/vzw-logo.png" class="App-logo" alt="logo" />
+            <h1 class="App-title">Welcome to VZMediaOps</h1>
+        </header>
+    </header>
     {% block content %}
 
     {% endblock %}
